  shell client. If currently set to the value ``ssh`` it will now guess the
  vendor of the program with that name, to restore the old behaviour that
  indicated the SSH Corporation client use ``sshcorp`` instead as the magic
  string. (Martin <gzlist@googlemail.com>, #176292)

New Features
************

* ``bzr commit`` now has a ``--commit-time`` option.
  (Alexander Sack, #459276)

Bug Fixes
*********

* After renaming a file, the dirstate could accidentally reference
  ``source\\path`` rather than ``source/path`` on Windows. This might be a
  source of some dirstate-related failures. (John Arbash Meinel)

* ``bzr ignore /`` no longer causes an IndexError. (Gorder Tyler, #456036)

* ``bzr mv --quiet`` really is quiet now.  (Gordon Tyler, #271790)

* ``bzr serve`` is more clear about the risk of supplying --allow-writes.
  (Robert Collins, #84659)

* ``bzr serve --quiet`` really is quiet now.  (Gordon Tyler, #252834)

* Lots of bugfixes for the test suite on Windows. We should once again
  have a test suite with no failures on Windows. (John Arbash Meinel)

* Terminate ssh subprocesses when no references to them remain, fixing
  subprocess and file descriptor leaks.  (Andrew Bennetts, #426662)
  
* The new glob expansion on Windows would replace all ``\`` characters
  with ``/`` even if it there wasn't a glob to expand, the arg was quoted,
  etc. Now only change slashes if there is something being glob expanded.
  (John Arbash Meinel, #485771)

* Use our faster ``KnownGraph.heads()`` functionality when computing the
  new rich-root heads. This can cut a conversion time in half (mysql from
  13.5h => 6.2h) (John Arbash Meinel, #487632)

Improvements
************

* ``bzrlib.urlutils.local_path_from_url`` now accepts
  'file://localhost/' as well as 'file:///' URLs on POSIX.  (Michael
  Hudson)

Documentation
*************

API Changes
***********

* ``bzrlib.textui`` (vestigial module) removed.  (Martin Pool)

Internals
*********

Testing
*******
